fix(VTimeline): single vertical divider overlap (#18037)
fixes #18008

--- a/packages/vuetify/src/components/VTimeline/VTimeline.sass
+++ b/packages/vuetify/src/components/VTimeline/VTimeline.sass
@@ -205,6 +205,11 @@ $timeline-line-size-first-last: calc(var(--v-timeline-line-size-base) - var(--v-
         left: 0
         right: initial
 
+.v-timeline-item:only-child
+  .v-timeline-divider__after
+    @include vertical
+      height: calc(var(--v-timeline-line-size-base) - var(--v-timeline-line-inset))
+
 .v-timeline-divider__dot
   z-index: 1
   flex-shrink: 0
